# 3dmatrix

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: ChildObject.h.4DE2013781C860CC.idx  LocalToWorldPosition.h.63D20D238DCF2104.idx  Matrix.h.8FDFA21A30483BD0.idx  ParentObject.h.F2ED108F95CA7AFA.idx  Renderer.cpp.1C338B5098733A95.idx  Renderer.h.1EA9BB98CFDEE243.idx  TranslateAndRotate.h.0A39B30DCB0E08C6.idx  main.cpp.68503E07569778DA.idx
src/: Renderer.cpp  main.cpp
src/Core/: Matrix.h  Polygon.h  Renderer.cpp  Renderer.h  TranslateAndRotate.h
src/Examples/: Examples.h
src/GameObjects/: ChildObject.h  ParentObject.h
src/Headers/: LocalToWorldPosition.h  Matrix.h  Renderer.h  TranslateAndRotate.h
